Bug 495154 - The "download debuginfo" checkbox has no effect when reloading the trace
Summary: The "download debuginfo" checkbox has no effect when reloading the trace
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.2.1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-21 18:26 UTC by Louis Moureaux
Modified: 2025-01-31 11:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Louis Moureaux 2024-10-21 18:26:49 UTC
SUMMARY

In the page that displays the raw GDB output, DrKonqi has a check box to toggle the download of debug symbols through debuginfod and a Refresh button. (Un-)ticking the box then refreshing doesn't change the GDB command line.

STEPS TO REPRODUCE
1. Send a sigsegv to some Kde program
2. The crash notification appears
3. Do not send the automatic crash report
4. In the bug report window, choose the second option, "display information for the dev team"
5. Check the GDB command line with ps ax | grep gdb
6. The command line matches the state of the "automatically download debug symbols" check box: if the box is checked, it contains "--init-eval-command=set debuginfod enabled on"
7. Kill gdb or wait until it finishes
8. Click on the automatic download box, changing its state
9. Click the Refresh button
10. Check the GDB command line again with ps ax | grep gdb
11. The command line is the same as before, not matching the check box
12. Repeat from step 1: this time the GDB command line changes

OBSERVED RESULT

The GDB command line matches the state of the check box at the start of the reporting tool.

EXPECTED RESULT

The check box changes the GDB command line for its next invocation.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 6.2
KDE Plasma Version: 6.2.1
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.8.0-47-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-01-13 10:07:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/284
Comment 2 Harald Sitter 2025-01-31 11:27:35 UTC
Git commit afbe39c766d2777653dbc6b488087f58c3139738 by Harald Sitter.
Committed on 31/01/2025 at 11:24.
Pushed by sitter into branch 'master'.

backtracegenerator: do not cache whether to resolve symbols

this has since been made mutable via a setting so we need to query this
on demand not on construction

M  +12   -1    src/backtracegenerator.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/afbe39c766d2777653dbc6b488087f58c3139738
Comment 3 Harald Sitter 2025-01-31 11:42:41 UTC
Git commit e76d2edc782ab53705a3f3b99af42a8122732c8a by Harald Sitter.
Committed on 31/01/2025 at 11:38.
Pushed by sitter into branch 'Plasma/6.3'.

backtracegenerator: do not cache whether to resolve symbols

this has since been made mutable via a setting so we need to query this
on demand not on construction
(cherry picked from commit afbe39c766d2777653dbc6b488087f58c3139738)

M  +12   -1    src/backtracegenerator.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/e76d2edc782ab53705a3f3b99af42a8122732c8a