backtracegenerator: do not cache whether to resolve symbols

this has since been made mutable via a setting so we need to query this
on demand not on construction

BUG: 495154